# cq-demo-app-002

./: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
infra/: main.bicep
src/: app.py  models.py
src/routes/: inventory.py  reports.py
src/services/: inventory_service.py  report_service.py
src/utils/: formatters.py  validators.py
tests/: test_app.py
